// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateCssExport > snapshot stability 1`] = `
"/* Type Scale — Custom — 1.272 */
:root {
  /* Font Families */
  --font-heading: 'Satoshi', sans-serif;
  --font-body: 'Satoshi', sans-serif;
  --font-mono: ui-monospace, 'Cascadia Code', Consolas, 'SF Mono', Menlo, 'DejaVu Sans Mono', monospace;

  /* Type Scale */
  --text-display: 4.2357rem;
  --text-h1: 3.3299rem;
  --text-h2: 2.6179rem;
  --text-h3: 2.0581rem;
  --text-h4: 1.618rem;
  --text-h5: 1.272rem;
  --text-h6: 1rem;
  --text-body-l: 1.618rem;
  --text-body-m: 1.272rem;
  --text-body-s: 1rem;
  --text-caption: 0.7862rem;

  /* Line Heights */
  --leading-display: 1.05;
  --leading-h1: 1.1;
  --leading-h2: 1.15;
  --leading-h3: 1.2;
  --leading-h4: 1.25;
  --leading-h5: 1.3;
  --leading-h6: 1.4;
  --leading-body-l: 1.5;
  --leading-body-m: 1.5;
  --leading-body-s: 1.5;
  --leading-caption: 1.4;

  /* Letter Spacing */
  --tracking-display: -0.04em;
  --tracking-h1: -0.03em;
  --tracking-h2: -0.02em;
  --tracking-h3: -0.01em;
  --tracking-h4: 0em;
  --tracking-h5: 0em;
  --tracking-h6: 0em;
  --tracking-body-l: 0em;
  --tracking-body-m: 0em;
  --tracking-body-s: 0.01em;
  --tracking-caption: 0.01em;
}
"
`;

exports[`generateTailwindV4Export > snapshot stability 1`] = `
"/* Type Scale — Custom — 1.272 */
@theme {
  --font-heading: 'Satoshi', sans-serif;
  --font-body: 'Satoshi', sans-serif;
  --font-mono: ui-monospace, 'Cascadia Code', Consolas, 'SF Mono', Menlo, 'DejaVu Sans Mono', monospace;

  --text-display: 4.2357rem;
  --text-h1: 3.3299rem;
  --text-h2: 2.6179rem;
  --text-h3: 2.0581rem;
  --text-h4: 1.618rem;
  --text-h5: 1.272rem;
  --text-h6: 1rem;
  --text-body-l: 1.618rem;
  --text-body-m: 1.272rem;
  --text-body-s: 1rem;
  --text-caption: 0.7862rem;

  --leading-display: 1.05;
  --leading-h1: 1.1;
  --leading-h2: 1.15;
  --leading-h3: 1.2;
  --leading-h4: 1.25;
  --leading-h5: 1.3;
  --leading-h6: 1.4;
  --leading-body-l: 1.5;
  --leading-body-m: 1.5;
  --leading-body-s: 1.5;
  --leading-caption: 1.4;

  --tracking-display: -0.04em;
  --tracking-h1: -0.03em;
  --tracking-h2: -0.02em;
  --tracking-h3: -0.01em;
  --tracking-h4: 0em;
  --tracking-h5: 0em;
  --tracking-h6: 0em;
  --tracking-body-l: 0em;
  --tracking-body-m: 0em;
  --tracking-body-s: 0.01em;
  --tracking-caption: 0.01em;
}
"
`;
